apps/ai/litellm/manifests/http-router.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  namespace: ai
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - "litellm.lab.the-lab.zone"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: litellm
          port: 4000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
